--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@nextui-org/react": "^1.0.0-beta.13",
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
